--- a/pipeline-developlment.yml
+++ b/pipeline-developlment.yml
@@ -58,13 +58,6 @@ jobs:
 
 
 
-
-
-
-
-
-
-
   push-image:
     name: Enviar imagem Heroku
     needs: [code-quality, tests]
@@ -85,11 +78,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: registry.heroku.com/lab-devops-project/web:latest
-
-
-
-
+          tags: registry.heroku.com/projeto-heroku/web:latest
 
 
 
@@ -106,7 +95,7 @@ jobs:
           username: ${{ secrets.HEROKU_EMAIL }}
           password: ${{ secrets.HEROKU_API_KEY }}
       - name: Publicação
-        run: heroku container:release -a lab-devops-project web
+        run: heroku container:release -a projeto-heroku web
         env:
           HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
