--- a/pipeline-developlment.yml
+++ b/pipeline-developlment.yml
@@ -1,4 +1,4 @@
-name: Ambiente De Desenvolvimento
+name: Ambiente Desenvolvimento
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
       - name: Adiciona permissão para mvnw
         run: chmod +x mvnw
       - name: Análise SonarCloud
-        run: ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=lab-devops-project -Dsonar.host.url=https://sonarcloud.io/
+        run: ./mvnw verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=lab-devops-project
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
@@ -56,9 +56,6 @@ jobs:
       - name: Testes Unitários
         run: mvn -B test --file pom.xml
 
-
-
-
   push-image:
     name: Enviar imagem Heroku
     needs: [code-quality, tests]
@@ -75,16 +72,11 @@ jobs:
           registry: registry.heroku.com
           username: ${{ secrets.HEROKU_EMAIL }}
           password: ${{ secrets.HEROKU_API_KEY }}
-
       - name: Criação e envio da imagem
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: registry.heroku.com/aplicacao-heroku-deploy/web:latest
-
-
-
-
 
   deploy:
     name: Publica ambiente Desenvolvimento
@@ -101,5 +93,5 @@ jobs:
       - name: Publicação
         run: heroku container:release -a aplicacao-heroku-deploy web
         env:
-          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          username: ${{ secrets.HEROKU_EMAIL }}
+          password: ${{ secrets.HEROKU_API_KEY }}
